--- a/project_umbrella.uproject
+++ b/project_umbrella.uproject
@@ -22,6 +22,10 @@
 			"Name": "ActorLocker",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/9280e03740c64592ad81b9fe751cec7e"
+		},
+		{
+			"Name": "GeometryScripting",
+			"Enabled": true
 		}
 	]
 }
